# RIKIBOT-FX4

./: .gitignore  .gitmodules  README.md  my_map.pgm
maps/: rtabmap.db
src/rikibot_project/rikibot/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot/launch/: bringup.launch  camera.launch  map_completion_watcher.launch  move_base.launch  navigate.launch  navigation_guard.launch
src/rikibot_project/rikibot/launch/depth_camera/: depth_camera_laser.launch
src/rikibot_project/rikibot/launch/lidar/: rplidar.launch
src/rikibot_project/rikibot/launch/slam/: auto_slam.launch  lidar_slam.launch
src/rikibot_project/rikibot/maps/: house.pgm  house.yaml
src/rikibot_project/rikibot/param/ekf/: hfi_robot_localization.yaml
src/rikibot_project/rikibot/param/imu/: imu_calib.yaml
src/rikibot_project/rikibot/param/lidar/: box_laserfilter.yaml  cxs_laserfilter.yaml  fx4_laserfilter.yaml
src/rikibot_project/rikibot/param/navigation/common/: costmap_cxs_params.yaml  costmap_fx4_params.yaml  costmap_x4_params.yaml  costmap_xs_params.yaml  costmap_xs_params_inflation_035.yaml  global_costmap_params.yaml  map_completion_watcher.yaml  mapping_supervisor.yaml  move_base_params.yaml  navigation_guard.yaml
src/rikibot_project/rikibot/param/slam/: slam_gmapping.xml
src/rikibot_project/rikibot/rviz/: navigate.rviz  odometry.rviz  slam.rviz
src/rikibot_project/rikibot/script/: EMERGENCY_STOP_README.md  emergency_stop.py  emergency_stop_service.py  keyboard_emergency_stop.py  map_completion_watcher.py  mapping_supervisor.py  navigation_guard.py
(+13 files in other folders)
